# routes/routers.go
@@ -22,15 +22,15 @@ func SetupRoutes(app *fiber.App, db *gorm.DB) {
 	generalRouter.Get("/site-detail", endpoint.GetSiteDetails)
 
 	// Auth Routes (8)
-	// authRouter := api.Group("/auth")
-	// authRouter.Post("/register", endpoint.Register)
-	// authRouter.Post("/verify-email", endpoint.VerifyEmail)
-	// authRouter.Post("/resend-verification-email", endpoint.ResendVerificationEmail)
-	// authRouter.Post("/send-password-reset-otp", endpoint.SendPasswordResetOtp)
-	// authRouter.Post("/set-new-password", endpoint.SetNewPassword)
-	// authRouter.Post("/login", endpoint.Login)
-	// authRouter.Post("/refresh", endpoint.Refresh)
-	// authRouter.Get("/logout", endpoint.AuthMiddleware, endpoint.Logout)
+	authRouter := api.Group("/auth")
+	authRouter.Post("/register", endpoint.Register)
+	authRouter.Post("/verify-email", endpoint.VerifyEmail)
+	authRouter.Post("/resend-verification-email", endpoint.ResendVerificationEmail)
+	authRouter.Post("/send-password-reset-otp", endpoint.SendPasswordResetOtp)
+	authRouter.Post("/set-new-password", endpoint.SetNewPassword)
+	authRouter.Post("/login", endpoint.Login)
+	authRouter.Post("/refresh", endpoint.Refresh)
+	authRouter.Get("/logout", endpoint.AuthMiddleware, endpoint.Logout)
 
 	// // Profile Routes ()
 	// profilesRouter := api.Group("/profiles")
